--- a/amintiri/src/styles/global.css
+++ b/amintiri/src/styles/global.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Futura BK BT:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Istok Web:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Futura Lt BT:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Futura Md BT:wght@400;700&display=swap');
 
 body {
     margin: 0;
